third_party/blink/renderer/core/layout/layout_object.h
@@ -1621,10 +1621,11 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
       const LayoutBoxModelObject* ancestor_to_stop_at,
       LayoutGeometryMap&) const;
 
-  bool ShouldUseTransformFromContainer(const LayoutObject* container) const;
-  void GetTransformFromContainer(const LayoutObject* container,
-                                 const LayoutSize& offset_in_container,
-                                 TransformationMatrix&) const;
+  virtual bool ShouldUseTransformFromContainer(
+      const LayoutObject* container) const;
+  virtual void GetTransformFromContainer(const LayoutObject* container,
+                                         const LayoutSize& offset_in_container,
+                                         TransformationMatrix&) const;
 
   bool CreatesGroup() const {
     return IsTransparent() || HasMask() || HasClipPath() ||
@@ -2053,6 +2054,10 @@ class CORE_EXPORT LayoutObject : public ImageResourceObserver,
   // other custom mechanisms (if they need to be notified of parent style
   // changes at all).
   virtual bool AnonymousHasStylePropagationOverride() { return false; }
+
+  void GetTransformFromContainerInternal(const LayoutObject* container,
+                                         const LayoutSize& offset_in_container,
+                                         TransformationMatrix&) const;
 
   // A fast path for MapToVisualRectInAncestorSpace for when GeometryMapper
   // can be used.
